...

    <!-- Maximum lengths -->
    <string name="max_length_title">35</string>
    <string name="max_length_description">1000</string>

    <!-- Error messages -->
    <string name="error_title_empty">The title can not be empty !</string>
    <string name="error_title_duplicated">This title is already taken !</string>
    <string name="error_title_contains_contributors_separator">"You cannot enter a title containing "</string>
    <string name="error_location_name_empty">The location name can not be empty !</string>
    <string name="error_location_name_duplicated">You can\'t use the same name for 2 locations !</string>
    <string name="error_authentication_failed">Authentication failed.</string>
    <string name="error_authentication_canceled">Authentication canceled.</string>
    <string name="error_valid_title_firebase">Title cannot contain . # $ [ ]</string>
...
    <string name="duration1m">1 month</string>

    <string name="duration2hstartTime">"> 2 hours"</string>

    <!-- Default locations titles-->
    <string name="everywhere_location">Everywhere</string>
    <string name="downtown_location">Downtown</string>
    <string name="home_location">Home</string>
    <string name="office_location">Office</string>
    <string name="school_location">School</string>
    <string name="select_one">Select one</string>

    <string name="location_enter_name">Enter the location name</string>
...
    <string name="custom_text">Custom</string>

    <!-- Unfilled task information messages-->
    <string name="unfilled_param">"—"</string>

    <!-- Preference key -->
    <string name="application_prefs_name">ch.epfl.sweng.TaskIt</string>
    <string name="new_user">FIRST_USER_LOGIN</string>
    <string name="first_launch">FIRST_LAUNCH</string>

    <string name="unfilled_duration">Not decided yet</string>
    <string name="unfilled_location">Not decided yet</string>


    <!-- Energy description -->
...
    <!-- LoginActivity -->
    <string name="warning_no_mult_account">You must use the same authentication service as before.</string>
    <string name="warning_google_serv_error">Google Play Services error.</string>
    <!-- LocationFragment -->
    <string name="info_deleted">" deleted"</string>
    <string name="info_cant_edit_delete">You can\'t edit or delete the default locations</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="location_delete_dialog_message">You have tasks set to this location. Set all these tasks to a new location :</string>
    <string name="location_delete_dialog_title">Used location</string>

    <!-- TaskFragment -->
    <string name="info_updated">" has been updated !"</string>
    <!-- MainActivity ListView texts -->
    <string name="due_today">Due today !</string>
    <string name="days_left">" days left"</string>
...
