<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/trash_menu"
        android:icon="@drawable/trash_36dp"
        android:title="@string/trash"
        app:showAsAction="ifRoom" />
</menu>
