...
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ActionBar">

        <ImageButton
            android:src="@drawable/ic_done_white_36dp"
            android:contentDescription="@string/done_location_description"
            android:id="@+id/location_done_button_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@null"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
...
        android:paddingTop="12dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_enter_name"
            android:id="@+id/locationName"
            android:maxLength="18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
...
